@@ -7,11 +7,11 @@
 # http://search.cpan.org/dist/Devel-NYTProf/
 #
 ###########################################################
-# $Id: Apache.pm 467 2008-09-18 09:51:06Z tim.bunce $
+# $Id: Apache.pm 496 2008-10-08 18:03:16Z tim.bunce $
 ###########################################################
 package Devel::NYTProf::Apache;
 
-our $VERSION = 0.01;
+our $VERSION = 0.02;
 
 BEGIN {
 
@@ -82,13 +82,40 @@ Devel::NYTProf::Apache - Profile mod_perl applications with Devel::NYTProf
 This module allows mod_perl applications to be profiled using
 C<Devel::NYTProf>. 
 
-If the NYTPROF environment variable isn't set then Devel::NYTProf::Apache
-will issue a warning and default it to:
+If the NYTPROF environment variable isn't set I<at the time
+Devel::NYTProf::Apache is loaded> then Devel::NYTProf::Apache will issue a
+warning and default it to:
 
 	file=/tmp/nytprof.$$.out
 
 See L<Devel::NYTProf/"ENVIRONMENT VARIABLES"> for 
 more details on the settings effected by this environment variable.
+
+Try using C<PerlPassEnv> so you can set the NYTPROF environment variable externally.
+
+Each profiled mod_perl process will need to have terminated before you can
+successfully read the profile data file. The simplest approach is to start the
+httpd, make some requests (e.g., 100 of the same request), then stop it and
+process the profile data.
+
+Alternatively you could send a TERM signal to the httpd worker process to
+terminate that one process. The parent httpd process will start up another one
+for you ready for more profiling.
+
+=head2 Example httpd.conf
+
+It's often a good idea to use just one child process when profiling, which you
+can do by setting the C<MaxClients> to 1 in httpd.conf.
+
+Using an C<IfDefine> blocks lets you leave the profile configuration in place
+and enable it whenever it's needed by adding C<-D NYTPROF> to the httpd startup
+command line.
+
+    <IfDefine NYTPROF>
+        MaxClients 1
+        PerlModule Devel::NYTProf::Apache
+    </IfDefine>
+
 
 =head1 SEE ALSO
 
