@@ -3,3 +3,5 @@ DB::disable_profile();
 1;
 DB::enable_profile();
 1;
+DB::disable_profile();
+1; # finish with profile disabled
